# Multi-Criteria-Decision-Making-Tool

./: Demo.py  README.md  pyproject.toml
decision_making_n2o/: __init__.py  main.py  qualitative.py  quantitative.py
decision_making_n2o.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: QualitativeScores.py  Quotes.py
